2-versiya Loyihaning About va Maqsadimiz sahifasi tugallandi

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div class="header__right df">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a href="#">About</a>
+                            <a href="./pages/about.html">About</a>
                         </li>
                         <li class="header__item">
-                            <a href="#">Maqsadimiz</a>
+                            <a href="./pages/goal.html">Maqsadimiz</a>
                         </li>
                         <li class="header__item">
                             <a href="#">Ta'lim</a>
