3-versiya Loyiha batamom Tugallandi

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
                             <a href="../pages/goal.html">Maqsadimiz</a>
                         </li>
                         <li class="header__item">
-                            <a href="#">Ta'lim</a>
+                            <a href="../pages/education.html">Ta'lim</a>
                         </li>
     
                         <li class="header__item">
