--- a/pages/education.html
+++ b/pages/education.html
@@ -71,21 +71,124 @@
 
 
     <main>
-        <section class="about__hero">
+
+        <div class="chance">
             <div class="container">
-                <div class="about__hero-in">
-                    <h3 class="about__hero-title">
-                        maqsadimiz bizni dunyo tan olishi
-                    </h3>
-                    <div class="about__hero-img">
-                        <img src="../images/Maqadimiz.png" alt="about-hero">
+                <div class="chance__in">
+                    <div class="chance__left">
+                        <div class="chance__left-title">
+                            <h3>
+                                imkoniyatdan foydalaning
+                            </h3>
+                        </div>
+                        <ul class="chance__left-list">
+                            <li class="chance__left-item">
+                                <a href="#" class="chance__left-link">
+                                    <img src="../images/elipce2.png" alt="elipce">
+                                    IT  ko’rsatuvlar va kontentlar ko’paytirish
+                                </a>
+                            </li>
+                            <li class="chance__left-item">
+                                <a href="#" class="chance__left-link">
+                                    <img src="../images/elipce2.png" alt="elipce">
+                                    IT  ko’rsatuvlar va kontentlar ko’paytirish
+                                </a>
+                            </li>
+                            <li class="chance__left-item">
+                                <a href="#" class="chance__left-link">
+                                    <img src="../images/elipce2.png" alt="elipce">
+                                    IT  ko’rsatuvlar va kontentlar ko’paytirish
+                                </a>
+                            </li>
+                        </ul>
+
+                        <div class="chance__left-btn">
+                            <button>Kirish</button>
+                        </div>
+
                     </div>
-                    <div class="goal-statistics">
-                        <div class="goal-statistic">
-                            <p>O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish </p>
-                            <button>
-                                Kirish
-                            </button>
+                    <div class="chance__right">
+                        <img src="../images/chance-girl.png" alt="girl">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section class="strategy">
+            <div class="container">
+                <div class="strategy__in">
+                    <div class="strategy__title">
+                        <h3>
+                            Bosqichli strategiya
+                        </h3>
+                    </div>
+
+                    <div class="strategy__cards">
+                        <div class="strategy__card">
+                            <div class="strategy__card-left">
+                                <div class="strategy__card-title">
+                                    <h3>
+                                        IT ta’lim va online kontent ko’paytirish
+                                    </h3>
+                                </div>
+                                <div class="strategy__card-desc">
+                                    <p>
+                                        O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish 
+                                    </p>
+                                </div>
+                                <div class="strategy__card-btn">
+                                    <button>
+                                        batafsil <img src="../images/array-right.svg" alt="array">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="strategy__card-right">
+                                <img src="../images/strategy-card1.svg" alt="strategiya">
+                            </div>
+                        </div>
+                        <div class="strategy__card">
+                            <div class="strategy__card-left">
+                                <div class="strategy__card-title">
+                                    <h3>
+                                        IT ta’lim va online kontent ko’paytirish
+                                    </h3>
+                                </div>
+                                <div class="strategy__card-desc">
+                                    <p>
+                                        O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish 
+                                    </p>
+                                </div>
+                                <div class="strategy__card-btn">
+                                    <button>
+                                        batafsil <img src="../images/array-right.svg" alt="array">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="strategy__card-right">
+                                <img src="../images/strategy-card2.svg" alt="strategiya">
+                            </div>
+                        </div>
+                        <div class="strategy__card">
+                            <div class="strategy__card-left">
+                                <div class="strategy__card-title">
+                                    <h3>
+                                        IT ta’lim va online kontent ko’paytirish
+                                    </h3>
+                                </div>
+                                <div class="strategy__card-desc">
+                                    <p>
+                                        O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish 
+                                    </p>
+                                </div>
+                                <div class="strategy__card-btn">
+                                    <button>
+                                        batafsil <img src="../images/array-right.svg" alt="array">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="strategy__card-right">
+                                <img src="../images/strategy-card1.svg" alt="strategiya">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -93,101 +196,92 @@
         </section>
 
 
-        <section class="stage">
+        <section class="opponuty">
             <div class="container">
-                <div class="stage__in">
-                    <h3 class="stage__title">
-                        Bosqichli maqsadimiz
-                    </h3>
+                <div class="opponuty__in">
+                    <div class="opponuty__right">
+                        <h3 class="opponuty__right-title">
+                            Qadamlar
+                        </h3>
 
-                    <div class="stage__cards">
-                        <div class="stage__card">
-                            <div class="stage__card-img">
-                                <img src="../images/stage-card.svg" alt="">
+                        <div class="opponuty__cards">
+                            <div class="opponuty__card-left">
+                                <img src="../images/opponuty1.svg" alt="opponuty">
+                                <p class="opponuty__card-title">
+                                    O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish
+                                </p>
                             </div>
-                            <div class="stage__card-title">
-                                <p>
-                                    IT sohasida faoliyat yuritayotgan davlat va nodavlat ta'lim muassasalarini qo'llab quvvatlash
+                            <div class="opponuty__card-left">
+                                <img src="../images/glass.svg" alt="opponuty">
+                                <p class="opponuty__card-title">
+                                    O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish
+                                </p>
+                            </div>
+                            <div class="opponuty__card-left">
+                                <img src="../images/strategic.svg" alt="opponuty">
+                                <p class="opponuty__card-title">
+                                    O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish
+                                </p>
+                            </div>
+                            <div class="opponuty__card-left">
+                                <img src="../images/user.svg" alt="opponuty">
+                                <p class="opponuty__card-title">
+                                    O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish
                                 </p>
                             </div>
                         </div>
-                        <div class="stage__card">
-                            <div class="stage__card-img">
-                                <img src="../images/stage-card.svg" alt="">
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section class="works">
+            <div class="container">
+                <div class="works__in">
+                    <div class="works__title">
+                        <h3>
+                            Ishlarimiz
+                        </h3>
+                    </div>
+                    <div class="works__cards">
+                        <div class="works__card">
+                            <div class="works__card-left">
+                                <img src="../images/works-card.svg" alt="works">
                             </div>
-                            <div class="stage__card-title">
-                                <p>
-                                    IT sohasida faoliyat yuritayotgan davlat va nodavlat ta'lim muassasalarini qo'llab quvvatlash
-                                </p>
+                            <div class="works__card-right">
+                                <div class="works__card-title">
+                                    <h3>
+                                        IT sohasida faoliyat yuritayotgan  dastur va ko’rsatuvlar
+                                    </h3>
+                                </div>
+                                <div class="works__card-desc">
+                                    <p>
+                                        O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish 
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="stage__card">
-                            <div class="stage__card-img">
-                                <img src="../images/stage-card.svg" alt="">
+                        <div class="works__card">
+                            <div class="works__card-left">
+                                <img src="../images/works-card.svg" alt="works">
                             </div>
-                            <div class="stage__card-title">
-                                <p>
-                                    IT sohasida faoliyat yuritayotgan davlat va nodavlat ta'lim muassasalarini qo'llab quvvatlash
-                                </p>
-                            </div>
-                        </div>
-                        <div class="stage__card">
-                            <div class="stage__card-img">
-                                <img src="../images/stage-card.svg" alt="">
-                            </div>
-                            <div class="stage__card-title">
-                                <p>
-                                    IT sohasida faoliyat yuritayotgan davlat va nodavlat ta'lim muassasalarini qo'llab quvvatlash
-                                </p>
+                            <div class="works__card-right">
+                                <div class="works__card-title">
+                                    <h3>
+                                        IT sohasida faoliyat yuritayotgan  dastur va ko’rsatuvlar
+                                    </h3>
+                                </div>
+                                <div class="works__card-desc">
+                                    <p>
+                                        O‘zbekistonda qizlarni akt sohasiga yana-da kengroq jalb etish va ularning it-ko‘nikmalarini ko'nikmalarini rivojlantirish 
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="stage__statistics">
-                        <div class="stage__statistic">
-                            <div class="stage__statistic-left">
-                                <div class="stage__statistic-title">
-                                    <img src="../images/Ellipse2.svg" alt="ellipce">
-                                    <h3>Jahon bozorini egallash</h3>
-                                </div>
-                                <div class="stage__statistic-desc">
-                                    <p>Connect with growing workforce and companies in the field of  the</p>
-                                </div>
-                            </div>
-                            <div class="stage__statistic-right">
-                                <img src="../images/stage-static1.svg" alt="static">
-                            </div>
-                        </div>
-                        <div class="stage__statistic">
-                            <div class="stage__statistic-left">
-                                <div class="stage__statistic-title">
-                                    <img src="../images/Ellipse2.svg" alt="ellipce">
-                                    <h3>Chetdan investitsiya olib kirish</h3>
-                                </div>
-                                <div class="stage__statistic-desc">
-                                    <p>Connect with growing workforce and companies in the field of  the</p>
-                                </div>
-                            </div>
-                            <div class="stage__statistic-right">
-                                <img src="../images/stage-static2.svg" alt="static">
-                            </div>
-                        </div>
-                        <div class="stage__statistic">
-                            <div class="stage__statistic-left">
-                                <div class="stage__statistic-title">
-                                    <img src="../images/Ellipse2.svg" alt="ellipce">
-                                    <h3>Markaziy osiyo 80% ulushi</h3>
-                                </div>
-                                <div class="stage__statistic-desc">
-                                    <p>Connect with growing workforce and companies in the field of  the</p>
-                                </div>
-                            </div>
-                            <div class="stage__statistic-right">
-                                <img src="../images/stage-static3.svg" alt="static">
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </section>
@@ -244,10 +338,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
 
         <section class="partners">
             <div class="container">
