4-versiya Loyhianing Linklariga styllar berildi

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
 
             <div class="header__nav-right df">
                 <div class="lang">
-                    <select name="" id="">
+                    <select >
                         <option value="Uz">Uz</option>
                         <option value="Rus">Rus</option>
                         <option value="Ang">Ang</option>
